--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <div class="left_Side">
             <div class="profileText">
                 <div class="imgBox">
-                    <img src="img/IMG_20240528_152244_1.jpg">
+                    <img src="img/perfil editada menor.jpg">
                 </div>
                 <h2>WALLACE ARAUJO <br><span>Desenvolverdor Full-Stack </span></h2>
+                <p>StackAtualmente, estudo e desenvolvoprojetos com HTML, CSS, Java & SpringBoot. Estou em transição de carreira,sou apaixonado por tecnologia e buscome aprimorar diariamente por meio deestudos e projetos pessoais.</p>
+            </div>
+            <div class="education">
+                <h3>Educação</h3>
             </div>
         </div>
         <div class="right_Side"></div>
